Fix blog post header spacing

--- a/src/app/blog/[slug]/post.module.css
+++ b/src/app/blog/[slug]/post.module.css
@@ -20,12 +20,13 @@
 }
 
 .back {
-  display: inline-block;
+  display: block;
+  width: fit-content;
   font-size: var(--font-size-sm);
   font-weight: 700;
   color: var(--primary);
   text-decoration: none;
-  margin-bottom: var(--space-6);
+  margin-bottom: var(--space-4);
 }
 
 .back:hover {
